# dimidium-facti-qui-coepit-habet

./: README.md
task_one/simple-wc-tool/: Cargo.toml  README.md  file.txt
task_one/simple-wc-tool/src/: analyzer.rs  main.rs
task_three/matrix-multiplication/: Cargo.toml  README.md
task_three/matrix-multiplication/src/: easter_egg.rs  main.rs  matrix.rs
task_two/books-api/: Cargo.toml  README.md
task_two/books-api/integration_tests/: setup.sh  test_websocket.py
task_two/books-api/src/: book.rs  error.rs  main.rs  ws.rs
