[package]
name = "books-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
actix-web-actors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2.9"
futures-util = "0.3"
tokio-tungstenite = "0.20"
